--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <h2>Новий формат традицій</h2>
     <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
     <p>Ми працюємо як найвідоміші мережі—<span>5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний дизайн та висока якість обслуговування!</p>
+    <img src="./images/backer-man.png" alt="Чоловік пекар усміхненно дивиться на булки">
 </section>
 <section>
     <h2>Наші найкращі шеф -кухарі</h2>
