--- a/index.html
+++ b/index.html
@@ -5,88 +5,94 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="#">
+            <a href="/">
                 <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a href="#"></a> Наші традиції</li>
-                <li><a href="#"></a> Шеф-кухарі</li>
-                <li><a href="#"></a> Формати</li>
-                <li><a href="#"></a> Контакти</li>
+                <li><a class="header-link" href="#traditions-section">Наші традиції</a></li>
+                <li><a class="header-link" href="#chef-section">Шеф-кухарі</a></li>
+                <li><a class="header-link" href="#formats-section">Формати</a></li>
+                <li><a class="header-link" href="#contacts-section">Контакти</a></li>
             </ul>
         </nav>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
-<section>
-    <h1>Сучасна пекарня</h1>
-    <ul>
-        <li>Великий попит на ринку</li>
-        <li>Доступні за бюджетом формати</li>
-        <li>Досвідчена управлінська команда</li>
-    </ul>
-</section>
-<section>
-    <h2>Новий формат традицій</h2>
-    <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.</p>
-    <p>Ми працюємо як найвідоміші мережі—<span>5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний дизайн та висока якість обслуговування!</p>
-    <img src="./images/backer-man.png" alt="Чоловік пекар усміхненно дивиться на хліб">
-</section>
-<section>
-    <h2>Наші найкращі шеф -кухарі</h2>
-    <ul>
-        <li><article>
-            <h3>Настя</h3>
-            <p>Привіт, я Настя!</p>
-            <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-            <p>Я випічу для вас найсмачніщі вироби!</p>
-        </article></li>
-        <li><article>
-            <h3>Влад</h3>
-            <p>Привіт, я Влад!</p>
-            <p>Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами через нашу
-                випічку!</p>
-            <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-        </article></li>
-    </ul>       
-</section>
-<section>
-    <h2>Формати</h2>
-    <ul>
-        <li>
-            <article>
-                <h3 lang="en">Walrus</h3>
-            </article>
-        </li>
-        <li>
-            <article>
-                <h3 lang="en">Horseshoe</h3>
-            </article>
-        </li>
-        <li>
-            <article>
-                <h3 lang="en">Handlebar</h3>
-            </article>
-        </li>
-    </ul>       
-</section>
-<section>
-    <h2>Приєднуйся до
-    мережі пекарень</h2>
-</section>
-</main>
+        <section class="hero-section">
+            <h1 class="title"><span class="accent">Сучасна</span> пекарня</h1>
+            <ul>
+                <li>Великий попит на ринку</li>
+                <li>Доступні за бюджетом формати</li>
+                <li>Досвідчена управлінська команда</li>
+            </ul>
+        </section>
+        <section id="traditions-section">
+            <h2  class="title-section">Новий формат традицій</h2>
+            <p><span class="accent-main">SHOP BAKERY</span> — це пекарня, яка взяла все найкраще, і зберегла смак <br> традиційної випічки та натуральність інгредієнтів.</p>
+            <p>Ми працюємо як найвідоміші мережі—<br><span class="accent-main">5 хвилин і замовлення готове.</span><br> А ще у наших пекарень стильний дизайн<br> та висока якість обслуговування!</p>
+            <img src="./images/backer-man.png" alt="Чоловік пекар усміхненно дивиться на хліб">
+        </section>
+        <section id="chef-section">
+            <h2  class="title-section">Наші найкращі шеф-кухарі</h2>
+            <ul>
+                <li><article>
+                    <h3 class="title-low-section">Настя</h3>
+                    <p>Привіт, я Настя!</p>
+                    <p>Вже 10 років, я свтілюю<br>у життя цікаві та смачні ідеї.</p>
+                    <p>Я випічу для вас<br>найсмачніщі вироби!</p>
+                </article></li>
+                <li><article>
+                    <h3 class="title-low-section">Влад</h3>
+                    <p>Привіт, я Влад!</p>
+                    <p>Мій кодитерський стаж вже 18 років. <br>SHOP BEKERY - це наша любов, з <br>якою ми ділимось кожен раз з Вами <br>через нашу випічку!</p>
+                    <p>Я зроблю для вас унікальну начинку <br>на будь який смак!</p>
+                </article></li>
+            </ul>       
+        </section>
+        <section class="pic-description" id="formats-section">
+            <h2  class="title-section">Формати</h2>
+            <ul>
+                <li>
+                    <article>
+                        <h3 class="title-section-pic" lang="en">Walrus</h3>
+                        <p>Площа: до 120 м2 <br>Меню: розширене меню <br> Штат: 2 продавці-касири, 2 пекарі, 2 <br>помічники пекаря, 2 офіціанти-різнороби <br>Посадкові місця: є </p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3 class="title-section-pic" lang="en">Horseshoe</h3>
+                        <p>Площа: до 25 м2 <br>Меню: найпопулярніші позиції меню<br>Штат: 2 продавці-касири, 2 пекарі, 1 <br> помічник пекаря<br>Посадкові місця: відсутні</p>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3 class="title-section-pic" lang="en">Handlebar</h3>
+                        <p>Площа: до 15 м2 <br>Меню: найпопулярніші позиції меню <br>Штат: 1 продавець, 1 пекар, 1 помічник <br> пекаря <br>Посадкові місця: відсутні</p>
+                    </article>
+                </li>
+            </ul>       
+        </section>
+        <section id="contacts-section">
+            <h2  class="title-section">Приєднуйся до мережі пекарень</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1640531314047!2d30.491233500000003!3d50.4566697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1699780522997!5m2!1sru!2sua"
+                width="603" height="595" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+    </main>
     <footer>
         <a href="#"></a>
         <nav>
             <ul>
-                <li><a href="#"></a> Формати</li>
-                <li><a href="#"></a> Наші традиції</li>
-                <li><a href="#"></a> Формати</li>
-                <li><a href="#"></a> Контакти</li>
+                <li><a href="#traditions-section">Формати</a></li>
+                <li><a href="#chef-section">Наші традиції</a></li>
+                <li><a href="#formats-section">Формати</a></li>
+                <li><a href="#contacts-section">Контакти</a></li>
             </ul>
         </nav>
         <address>
@@ -97,7 +103,7 @@
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#">Політика конфіденційності</a></li>
-                <p>© 2022 Дані захищені</p>
+                <p>&copy; 2022 Дані захищені</p>
             </ul>
         </address>
     </footer>
