--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -23,12 +26,12 @@
         <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
-        <section class="hero-section">
+        <section >
             <h1 class="title"><span class="accent">Сучасна</span> пекарня</h1>
-            <ul>
-                <li>Великий попит на ринку</li>
-                <li>Доступні за бюджетом формати</li>
-                <li>Досвідчена управлінська команда</li>
+            <ul class="hero-section">
+                <li class="hero-section-item">Великий попит на ринку</li>
+                <li class="hero-section-item">Доступні за бюджетом формати</li>
+                <li class="hero-section-item">Досвідчена управлінська команда</li>
             </ul>
         </section>
         <section id="traditions-section">
@@ -38,7 +41,7 @@
             <img src="./images/backer-man.png" alt="Чоловік пекар усміхненно дивиться на хліб">
         </section>
         <section id="chef-section">
-            <h2  class="title-section">Наші найкращі шеф-кухарі</h2>
+            <h2  class="title-section">Наші найкращі <span class="accent-main">шеф-кухарі</span></h2>
             <ul>
                 <li><article>
                     <h3 class="title-low-section">Настя</h3>
