Local fonts update

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -17,10 +14,10 @@
                 <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a class="header-link" href="#traditions-section">Наші традиції</a></li>
-                <li><a class="header-link" href="#chef-section">Шеф-кухарі</a></li>
-                <li><a class="header-link" href="#formats-section">Формати</a></li>
-                <li><a class="header-link" href="#contacts-section">Контакти</a></li>
+                <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                <li><a class="link" href="#chef-section">Шеф-кухарі</a></li>
+                <li><a class="link" href="#formats-section">Формати</a></li>
+                <li><a class="link" href="#contacts-section">Контакти</a></li>
             </ul>
         </nav>
         <button class="button" type="button">Замовити дзвінок</button>
@@ -41,7 +38,7 @@
             <img src="./images/backer-man.png" alt="Чоловік пекар усміхненно дивиться на хліб">
         </section>
         <section id="chef-section">
-            <h2  class="title-section">Наші найкращі <span class="accent-main">шеф-кухарі</span></h2>
+            <h2  class="title-section">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
             <ul>
                 <li><article>
                     <h3 class="title-low-section">Настя</h3>
@@ -89,23 +86,25 @@
         </section>
     </main>
     <footer>
-        <a href="#"></a>
+        <a href="/">
+            <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+        </a>
         <nav>
             <ul>
-                <li><a href="#traditions-section">Формати</a></li>
-                <li><a href="#chef-section">Наші традиції</a></li>
-                <li><a href="#formats-section">Формати</a></li>
-                <li><a href="#contacts-section">Контакти</a></li>
+                <li><a class="link" href="#traditions-section">Франщиза</a></li>
+                <li><a class="link" href="#chef-section">Наші традиції</a></li>
+                <li><a class="link" href="#formats-section">Формати</a></li>
+                <li><a class="link" href="#contacts-section">Контакти</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-                <li><a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-                <li><a href="https://maps.app.goo.gl/4jJMo3dhJYnmSr639" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a></li>
+                <li><a class="footer-contacts" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+                <li><a class="footer-contacts" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
+                <li><a class="footer-contacts" href="https://maps.app.goo.gl/4jJMo3dhJYnmSr639" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
-                <li><a href="#">Політика конфіденційності</a></li>
+                <li><a class="footer-contacts" href="#">Політика конфіденційності</a></li>
                 <p>&copy; 2022 Дані захищені</p>
             </ul>
         </address>
